--- a/index.html
+++ b/index.html
@@ -58,10 +58,15 @@
           </button>
         </div>
       </section>
-      <section class="row log">
+      <section class="row log" v-if="turns.length > 0">
         <div class="small-12 columns">
           <ul>
-            <li></li>
+            <li
+              v-for="turn in turns"
+              :class="{'player-turn': turn.isPlayer, 'monster-turn': !turn.isPlayer}"
+            >
+              {{ turn.text }}
+            </li>
           </ul>
         </div>
       </section>
